--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "require": {
         "php": "^8.2",
         "andreiio/blade-remix-icon": "^3.6",
+        "bezhansalleh/filament-language-switch": "^3.1",
         "codeat3/blade-line-awesome-icons": "^1.5",
         "codeat3/blade-phosphor-icons": "^2.3",
         "filament/filament": "3.3",
