--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "php": "^8.2",
         "andreiio/blade-remix-icon": "^3.6",
         "bezhansalleh/filament-language-switch": "^3.1",
+        "codeat3/blade-google-material-design-icons": "^1.20",
         "codeat3/blade-line-awesome-icons": "^1.5",
         "codeat3/blade-phosphor-icons": "^2.3",
         "filament/filament": "3.3",
@@ -16,7 +17,8 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "livewire/flux": "^2.1.1",
-        "livewire/volt": "^1.7.0"
+        "livewire/volt": "^1.7.0",
+        "mallardduck/blade-lucide-icons": "^1.23"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
